# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "基于Gin + Vue + Element UI的前后端分离权限管理系统的接口文档\n添加微信号: zwj891129 进入技术交流微信群 请备注，谢谢！",
+        "description": "基于Gin + Vue + Element UI的前后端分离权限管理系统的接口文档\n添加qq群: 74520518 进入技术交流群 请备注，谢谢！",
         "title": "go-admin API",
         "contact": {},
         "license": {
@@ -418,9 +418,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "字典数据"
+                    "配置"
                 ],
-                "summary": "添加字典数据",
+                "summary": "添加配置",
                 "parameters": [
                     {
                         "description": "data",
@@ -429,7 +429,7 @@
                         "required": true,
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/models.DictType"
+                            "$ref": "#/definitions/models.Config"
                         }
                     }
                 ],
@@ -1552,7 +1552,7 @@
                 ],
                 "description": "获取JSON",
                 "tags": [
-                    "角色"
+                    "角色/Role"
                 ],
                 "summary": "获取Role数据",
                 "parameters": [
@@ -1578,7 +1578,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "角色"
+                    "角色/Role"
                 ],
                 "summary": "修改用户角色",
                 "parameters": [
@@ -1608,7 +1608,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "角色"
+                    "角色/Role"
                 ],
                 "summary": "创建角色",
                 "parameters": [
@@ -1637,7 +1637,7 @@
             "delete": {
                 "description": "删除数据",
                 "tags": [
-                    "角色"
+                    "角色/Role"
                 ],
                 "summary": "删除用户角色",
                 "parameters": [
@@ -1666,28 +1666,28 @@
                         "": []
                     }
                 ],
-                "description": "获取JSON",
+                "description": "Get JSON",
                 "tags": [
-                    "配置"
+                    "角色/Role"
                 ],
-                "summary": "配置列表数据",
+                "summary": "角色列表数据",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "configKey",
-                        "name": "configKey",
+                        "description": "roleName",
+                        "name": "roleName",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "configName",
-                        "name": "configName",
+                        "description": "status",
+                        "name": "status",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "configType",
-                        "name": "configType",
+                        "description": "roleKey",
+                        "name": "roleKey",
                         "in": "query"
                     },
                     {
@@ -1973,6 +1973,43 @@
                         "description": "{\"code\": -1, \"message\": \"删除失败\"}",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/tables/page": {
+            "get": {
+                "description": "数据库表分页列表 / database table page list",
+                "tags": [
+                    "工具 / Tools"
+                ],
+                "summary": "分页列表数据 / page list data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "tableName / 数据表名称",
+                        "name": "tableName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageSize / 页条数",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "pageIndex / 页码",
+                        "name": "pageIndex",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"data\": [...]}",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
